# dbfaker

./: DEV-README.md  Dockerfile  Makefile  README.md  dbfaker.sh  pyproject.toml
dbfaker/: _version.py  main.py
tests/: test_main.py
