[tool.poetry]
name = "dbfaker-image"
version = "0.1.0"
description = ""
authors = ["Kevin Burkhardt <kevin.burkhardt@goldfeinclaims.com>"]
readme = "README.md"
packages = [{include = "dbfaker"}]


[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
betterenv = "^1.0.0"
boto3 = "^1.26.133"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
faker = "^19.3.1"
mimesis = "^11.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pyproject-flake8 = "6.0.0.post1"
pytest-cov = "^4.1.0"
poetry-bumpversion = "^0.3.0"
black = "^23.1.0"
pylint = "^2.17.0"
mypy = "^1.1.1"
pandas = "^1.5.3"
ipython = "^8.11.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-mock = "^3.11.1"
ansible = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry_bumpversion.file."dbfaker/_version.py"]


[tool.flake8]
extend-ignore = ["E501", "W503", "E203"]
max-line-length = 120


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
max-locals = 25
max-nested-blocks = 10
max-branches = 15
max-statements = 100
max-attributes = 20